--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -3,7 +3,7 @@
       <br />
       <h1 id="title">URL Shortener Microservice</h1>
       <span id="form">
-      <form action="https://api-projects-kjtvxbawxuljqtke.c9users.io/shorturl" method="POST">
+      <form action="https://u-rl-chan.herokuapp.com/shorturl" method="POST">
         <input type="input" id="url" name="url">
         <input type="submit" id="submit">
       </form>
