--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,7 +7,7 @@
     <body>
 <div class="container">
     {{{body}}}
-    <div className="footer text-center">desinged & coded by <a href="http://codepen.io/Chan11/" target="_blank"><strong>Chandrahas</strong></a></div>
+    <div className="footer text-center">DESIGNED & CODED BY <a href="http://codepen.io/Chan11/" target="_blank"><strong>CHANDRAHAS</strong></a></div>
     </div>
     </body>
 </html>
